caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_blueprint_name.caffeine
Blueprints
  * :
    Requiring { env: String }
    Provides { value: "x" }
